--- a/forms/insert_item_display.phtml
+++ b/forms/insert_item_display.phtml
@@ -3,6 +3,7 @@
 	<header>Display Settings</header>
     <div class="section-wrapper">
         <div class="form-sub-section">
+        	<?php include cahnrswp\cahnrs\core\DIR.'forms/parts/display_title.phtml';?>
             <p class="input-wrap">
                 Style:  
                 <select  name="<?php echo $this->get_field_name( 'display' ); ?>">
