--- a/css/cahnrs-core-admin-css.css
+++ b/css/cahnrs-core-admin-css.css
@@ -19,6 +19,14 @@
 	position: relative;
 	bottom: -1px;
 }
+
+.cc-dynamic-section {
+	display: none;
+}
+.cc-dynamic-section.selected{
+	display: block;
+}
+
 .cc-form-feed-options {
 	background: #fff;
 	border: 1px solid #ddd;
@@ -59,4 +67,39 @@
 }
 .cc-form-section .section-wrapper .cc-inline-input {
 	display: inline-block; width: 50%;
+}
+
+.cc-form-section .section-wrapper .cc-inserted-items-wrap a {
+	display: block;
+	padding: 4px 10px;
+	margin: 4px 10px;
+	background: #777;
+	color: #fff;
+	border-radius: 3px;
+	border: 1px solid #555;
+	text-decoration: none;
+	position: relative;
+}
+.cc-form-section .section-wrapper .cc-inserted-items-wrap a span {
+	float: right;
+}
+
+.cc-form-section .section-wrapper .cc-inserted-items-wrap a:hover span {
+	color: #900; 
+}
+
+
+.cc-button-primary {
+margin: 4px;
+text-decoration: none;
+padding: 6px 10px;
+border-radius: 4px;
+display: inline-block;
+font-weight: bold;
+font-size: 1em;
+background: #2ea2cc;
+border-color: #0074a2;
+color: #fff;
+-webkit-box-shadow: inset 0 1px 0 rgba(120,200,230,.5),0 1px 0 rgba(0,0,0,.15);
+box-shadow: inset 0 1px 0 rgba(120,200,230,.5),0 1px 0 rgba(0,0,0,.15);
 }
